Повышение стабильности, уменьшение расхода памяти.

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -6,14 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="theme-color" content="#1f8dd6">
 	<title>JeeUI2</title>
-	<script src="js/maker.js"></script>
 	<link rel="stylesheet" href="css/pure-min.css">
 	<link rel="stylesheet" href="css/side-menu.css">
 	<link rel="stylesheet" href="css/range.css">
 	<link rel="stylesheet" href="css/grids.css">
 	<link rel="stylesheet" href="css/chk.css">
 </head>
-<body> <!-- onload="parse()" -->
+<body onload="parse()"> <!-- onload="parse()" -->
     <div id="layout">
         <a href="#menu" id="menuLink" class="menu-link">
             <span></span>
@@ -24,6 +23,7 @@
         <div id="debug"></div>
 
     </div>
-	<script src="js/ui.js"></script>
+<script src="js/ui.js"></script>
+<script src="js/maker.js"></script>
 </body>
 </html>
