+ Поддержка http-команд * Багфиксы * Повышение стабильности загрузки интерфейса

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -6,11 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="theme-color" content="#1f8dd6">
 	<title>JeeUI2</title>
-	<link rel="stylesheet" href="css/pure-min.css">
-	<link rel="stylesheet" href="css/side-menu.css">
-	<link rel="stylesheet" href="css/range.css">
-	<link rel="stylesheet" href="css/grids.css">
-	<link rel="stylesheet" href="css/chk.css">
+	<link rel="stylesheet" href="css/all.css">
 </head>
 <body onload="parse()"> <!-- onload="parse()" -->
     <div id="layout">
@@ -23,7 +19,6 @@
         <div id="debug"></div>
 
     </div>
-<script src="js/ui.js"></script>
-<script src="js/maker.js"></script>
+<script src="js/all.js"></script>
 </body>
 </html>
